<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicPlayer"
    android:id="@+id/mainLayout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="326dp"
        android:layout_height="94dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="92dp"
        android:width="200dp"
        android:height="100dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginBottom="45dp"
        android:onClick="onBackButtonPress"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginBottom="98dp"
        android:onClick="onPlayButtonPress"
        android:text="@string/play_button"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintStart_toEndOf="@+id/buttonPause" />

    <Button
        android:id="@+id/buttonPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="191dp"
        android:onClick="onPauseButtonPress"
        android:text="@string/pause_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginBottom="191dp"
        android:onClick="onStopButtonPress"
        android:text="@string/stop_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay" />

    <TextView
        android:id="@+id/viewSpeed"
        android:layout_width="305dp"
        android:layout_height="25dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="35dp"
        android:text="@string/playback"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <SeekBar
        android:id="@+id/progressBar"
        android:layout_width="317dp"
        android:layout_height="43dp"
        android:layout_marginStart="47dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressText" />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="186dp"
        android:layout_height="28dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="133dp"
        android:text="@string/progress"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSpeed" />

</androidx.constraintlayout.widget.ConstraintLayout>