<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:id="@+id/mainLayout"
    >

    <SeekBar
        android:id="@+id/seekBarRed"
        android:layout_width="190dp"
        android:layout_height="28dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="111dp"
        android:max="255"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:thumbTint="@android:color/holo_red_light"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="29dp"
        android:layout_height="28dp"
        android:layout_marginTop="86dp"
        android:gravity="center"
        android:text="R"
        app:layout_constraintEnd_toStartOf="@+id/seekBarRed"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="29dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="B"
        app:layout_constraintEnd_toStartOf="@+id/seekBarBlue"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <SeekBar
        android:id="@+id/seekBarBlue"
        android:layout_width="190dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="111dp"
        android:max="255"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarGreen"
        android:thumbTint="@android:color/holo_blue_light"/>

    <SeekBar
        android:id="@+id/seekBarGreen"
        android:layout_width="190dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="111dp"
        android:max="255"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarRed"
        android:thumbTint="@android:color/holo_green_light"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="29dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="G"
        app:layout_constraintEnd_toStartOf="@+id/seekBarGreen"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/viewColour"
        android:layout_width="156dp"
        android:layout_height="78dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarBlue" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="34dp"
        android:onClick="saveColour"
        android:text="@string/save_button"
        app:layout_constraintStart_toEndOf="@+id/viewColour"
        app:layout_constraintTop_toBottomOf="@+id/seekBarBlue" />

    <Spinner
        android:id="@+id/playbackSpeed"
        android:layout_width="235dp"
        android:layout_height="55dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="13dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playbackText" />

    <TextView
        android:id="@+id/playbackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="132dp"
        android:text="@string/playback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewColour" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="72dp"
        android:onClick="goBack"
        android:text="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playbackSpeed" />

</androidx.constraintlayout.widget.ConstraintLayout>